--- a/pixel-draw/src/components/components.css
+++ b/pixel-draw/src/components/components.css
@@ -48,13 +48,15 @@
     height: 50px;
     font-size: 25px; 
     text-transform: uppercase;
+    border-radius: 5px;
+    border:none;
     letter-spacing: 1.5px;
     font-weight: 900;
     transition: all 0.3s ease-in-out;
     padding: 10px;
 }
 .button:hover{
-    background-color: none;
+    background-color: black;
 }
 .pixel{
     width:20px; 
