--- a/pixel-draw/src/components/components.css
+++ b/pixel-draw/src/components/components.css
@@ -7,7 +7,7 @@
     margin: 30px;
 }
 .editor > *{
-    margin: 20px;
+    margin: 15px;
 }
 .drawing-panel{
     display: flex;
@@ -16,7 +16,7 @@
     align-items: center;
 }
 .drawing-panel > *{
-    margin: 20px
+    margin: 15px
 }
 .options{
     display: flex; 
@@ -46,22 +46,20 @@
     margin: 10px; 
 }
 .button{
-    height: 50px;
+    height: 70px;
     font-size: 25px; 
     text-transform: uppercase;
     border-radius: 5px;
     border:none;
     letter-spacing: 1.5px;
     font-weight: 900;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.4s ease-in-out;
     padding: 10px;
 }
 .button:hover{
     background-color: black;
 }
 .pixel{
-    width:20px; 
-    height: 20px;
     margin: 0px;
     transition: all 0.1s ease-in-out;
 }
@@ -72,8 +70,69 @@
 
 }
 .text{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Courier New', Courier, monospace;
     font-size: 30px; 
     font-weight: 600;
     text-align: center;
+}
+#canvasName{
+    text-align: center;
+    margin:0px;
+    border-radius: 5px;
+    border-style: none;
+    font-size: 25px;
+    font-weight: 900;
+    padding: 10px;
+    height: 40px;
+    width: 300px;
+    transition: all 0.7s ease-in-out;
+}
+#canvasName::placeholder{
+    color: aliceblue;   
+}
+#canvasName:focus::placeholder{
+    color: black;   
+}
+#canvasName:focus{
+    height: 45px;
+    width: 350px;
+    color: black;
+    background-color: aliceblue;
+}
+#canvasBox{
+    display: flex; 
+    justify-content:center;
+    align-items: center;
+    height: 150px;
+}
+#canvasBox > *{
+    margin: 10px;
+}
+#quickActions{
+    display:flex; 
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 100%;
+    width: 45px;
+}
+#quickActions > *{
+    width: 32px;
+    height: 32px;
+    border-radius: 5px;
+    border: 3px solid whitesmoke;
+    transition: all 0.2s ease-in-out;
+}
+#quickActions > *:hover{
+    width: 40px;
+    height: 40px;    
+}
+#black{
+    background-color: black;
+}
+#white{
+    background-color: white;
+}
+#transparent{
+    background-color: whitesmoke;
 }
